--- a/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-in-category/sw-condition-line-item-in-category.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/rule/condition-type/sw-condition-line-item-in-category/sw-condition-line-item-in-category.html.twig
@@ -17,16 +17,48 @@
         description-position="bottom"
         @change="setCategoryIds"
     >
-        <template #result-description-property="{ item }">
-            {% block sw_condition_line_item_in_category_field_description %}
-            <slot
-                name="result-description-property"
-                v-bind="{ item }"
+        <template #result-item="{ item, index, isSelected, addItem, displayLabelProperty, isSelectionDisabled, descriptionPosition, highlightSearchTerm, searchTerm }">
+            {% block sw_condition_line_item_in_category_field_result_item %}
+            <li
+                is="sw-select-result"
+                :selected="isSelected(item)"
+                v-bind="{ item, index }"
+                :disabled="isSelectionDisabled(item)"
+                :description-position="descriptionPosition"
+                @item-select="addItem"
             >
-                {% block sw_condition_line_item_in_category_field_description_default %}
-                {{ getCategoryBreadcrumb(item) }}
+                {% block sw_condition_line_item_in_category_field_result_item_content %}
+                <span class="sw-condition-line-item-in-category__result-item">
+                    <sw-highlight-text
+                        v-if="highlightSearchTerm"
+                        :text="displayLabelProperty(item)"
+                        :search-term="searchTerm"
+                    />
+                    <template v-else>
+                        {{ displayLabelProperty(item) }}
+                    </template>
+
+                    <sw-help-text
+                        v-if="item.productAssignmentType === 'product_stream'"
+                        class="sw-condition-line-item-in-category__help-text"
+                        :text="$tc('global.sw-condition.condition.categoryWithProductStreamTooltip')"
+                    />
+                </span>
                 {% endblock %}
-            </slot>
+
+                <template #description>
+                    {% block sw_condition_line_item_in_category_field_description %}
+                    <slot
+                        name="result-description-property"
+                        v-bind="{ item }"
+                    >
+                        {% block sw_condition_line_item_in_category_field_description_default %}
+                        {{ getCategoryBreadcrumb(item) }}
+                        {% endblock %}
+                    </slot>
+                    {% endblock %}
+                </template>
+            </li>
             {% endblock %}
         </template>
     </sw-entity-multi-select>
