--- a/src/Administration/Resources/app/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-products/sw-sales-channel-detail-products.html.twig
+++ b/src/Administration/Resources/app/administration/src/module/sw-sales-channel/view/sw-sales-channel-detail-products/sw-sales-channel-detail-products.html.twig
@@ -66,6 +66,7 @@
                     :allow-view="acl.can('sales_channel.viewer')"
                     :allow-edit="acl.can('product.editor')"
                     :allow-delete="acl.can('sales_channel.deleter')"
+                    :is-record-selectable="isProductRemovable"
                 >
                     <template #column-name="{ item }">
                         <slot v-bind="{ item }">
@@ -106,6 +107,7 @@
                         {% block sw_sales_channel_detail_products_listing_delete_action %}
                         <sw-context-menu-item
                             variant="warning"
+                            :disabled="!isProductRemovable(item)"
                             @click="onDeleteProduct(item)"
                         >
                             {{ $tc('global.default.remove') }}
