NEXT-20011 - Implement extension skeleton

--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.html.twig
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.html.twig
@@ -43,5 +43,23 @@
     <template v-if="variant === 'listing'">
         <sw-skeleton-bar />
     </template>
+
+    <template v-if="variant === 'extension-apps'">
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+    </template>
+
+    <template v-if="variant === 'extension-themes'">
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+        <sw-skeleton-bar />
+    </template>
 </div>
 {% endblock %}
