--- a/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.scss
+++ b/src/Administration/Resources/app/administration/src/app/component/utils/sw-skeleton/sw-skeleton.scss
@@ -131,4 +131,34 @@ $sw-skeleton-background: $color-gray-50;
     &__tree-item-checkbox {
         width: 24px;
     }
+
+    &__extension-apps {
+        width: 960px;
+        background-color: $sw-skeleton-background;
+        overflow: hidden;
+        margin: 94px auto 0;
+
+        .sw-skeleton-bar {
+            height: 65px;
+
+            &:not(:last-child) {
+                margin-bottom: 8px;
+            }
+        }
+    }
+
+    &__extension-themes {
+        width: 960px;
+        background-color: $sw-skeleton-background;
+        overflow: hidden;
+        margin: 94px auto 0;
+
+        .sw-skeleton-bar {
+            height: 86px;
+
+            &:not(:last-child) {
+                margin-bottom: 8px;
+            }
+        }
+    }
 }
